--- a/Marshiun.html
+++ b/Marshiun.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is a simle website</title>
+    <link rel="stylesheet" href="styles/blog.css">
+    
 </head>
 <body>
-    
+    <div>
+        <h3>my first website</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias omnis ipsa rerum expedita debitis velit corrupti esse quas eos possimus. Sunt aut quasi ipsum nostrum porro error doloremque quis asperiores rerum? Ea atque quis libero cupiditate architecto dolorem inventore placeat?
+        </p>
+    </div>
 </body>
 </html>
