--- a/Marshiun.html
+++ b/Marshiun.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is a simle website</title>
     <link rel="stylesheet" href="styles/blog.css">
+    <link rel="stylesheet" href="styles/blog.css">
+    <style>
+        
+    </style>
     
 </head>
 <body>
@@ -12,6 +16,27 @@
         <h3>my first website</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias omnis ipsa rerum expedita debitis velit corrupti esse quas eos possimus. Sunt aut quasi ipsum nostrum porro error doloremque quis asperiores rerum? Ea atque quis libero cupiditate architecto dolorem inventore placeat?
         </p>
+    </div>
+    <div>
+        <h3>my 2nd website</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias omnis ipsa rerum expedita debitis velit corrupti esse quas eos possimus. Sunt aut quasi ipsum nostrum porro error doloremque quis asperiores rerum? Ea atque quis libero cupiditate architecto dolorem inventore placeat?
+        </p>
+    </div>
+    <div>
+        <h3>my 3rd website</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias omnis ipsa rerum expedita debitis velit corrupti esse quas eos possimus. Sunt aut quasi ipsum nostrum porro error doloremque quis asperiores rerum? Ea atque quis libero cupiditate architecto dolorem inventore placeat?
+        </p>
+    </div>
+    <h3>code push proccess</h3>
+    <ol>
+        <li>git add .</li>
+        <li>git commit -m"meaningfull somthing</li>
+        <li>git push</li>
+    </ol>
+
+    <div>
+        <h3>marshu saradin fb scroll kore </h3>
+        <img src="Umbrella pic.jpg" alt="Marshiun">
     </div>
 </body>
 </html>
