--- a/Marshiun.html
+++ b/Marshiun.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is a simle website</title>
+    <title>This is a simple website</title>
     <link rel="stylesheet" href="styles/blog.css">
     <link rel="stylesheet" href="styles/blog.css">
     <style>
@@ -36,7 +36,12 @@
 
     <div>
         <h3>marshu saradin fb scroll kore </h3>
-        <img src="Umbrella pic.jpg" alt="Marshiun">
+        <img width="500px"  src="Umbrella pic.jpg" alt="Marshiun">
+    </div>
+    <div>
+        <h3>Here is my son's picture</h3>
+        <p>I have few son's.which I made By Hardwork.click the "see"button to see them.</p><button>see</button><br>
+        <img width="500px" src="xyz.jpg" alt="Hamari bacca">
     </div>
 </body>
 </html>
